--- a/src/main/js/package.json
+++ b/src/main/js/package.json
@@ -1,7 +1,12 @@
 {
   "name": "pesel-validator",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "[PL] Walidator numerów PESEL dla JS i javy. Walidator umożliwia walidację samego numeru PESEL jak i walidację na podstawie podanej daty urodzenia oraz płci.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kuna728/pesel-validator",
+    "directory": "src/main/js"
+  },
   "main": "src/peselValidator.js",
   "scripts": {
     "test": "jest"
@@ -18,6 +23,7 @@
     "moment": "^2.29.4"
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.19.6",
     "jest": "^29.3.1"
   }
 }
